# Govhack

./: .gitignore  EDtimes.py  Home_🏠.py  README.md  backup_ed.py  clean_raw_data.R  data-analysis.py  get_location.py  h0737.xlsx  helplines.py  landing_page.py  main.py  package.json  pyproject.toml  requirements.txt  tbl4-2 chart.Rmd
autocomplete_component/: __init__.py  setup.py
autocomplete_component/autocomplete_component/: __init__.py
autocomplete_component/autocomplete_component/frontend/: package.json
autocomplete_component/autocomplete_component/frontend/public/: main.css
autocomplete_component/autocomplete_component/frontend/src/: AddressAutocomplete.tsx  GetLocation.tsx  index.tsx
autocomplete_component/frontend/: package.json  tsconfig.json
autocomplete_component/frontend/src/: GetLocation.tsx  index.tsx
data/: AIHW_ED_median_waittime_sample.csv  AIHW_ED_ontime_presentation_rate_by_state_by_cohort.csv  AIHW_ED_triage_by_arrival.csv  AIHW_ED_within4hr_presentation_rate_by_state_by_cohort.csv  NTGovt_ED_presentation_rate_per_capita_2018-19.csv
pages/: app.py  data-analysis.py
